--- a/OfisAsistan/App.config
+++ b/OfisAsistan/App.config
@@ -9,8 +9,8 @@
         <add key="SupabaseKey" value="sb_secret_-LieQ2b1MzGAGTDQ-GfaFg_j97uAzjj" />
         
         <!-- OpenAI Ayarları -->
-        <add key="OpenAIApiKey" value="" />
-        <add key="OpenAIUrl" value="https://api.openai.com" />
+        <add key="OpenAIApiKey" value="GROQ_API_KEY" />
+        <add key="OpenAIUrl" value="https://api.groq.com/openai" />
         
         <!-- Alternatif: Gemini API kullanmak isterseniz -->
         <!-- <add key="GeminiApiKey" value="your-gemini-api-key" /> -->
